--- a/apicius-frontend/src/styles/registerForm.css
+++ b/apicius-frontend/src/styles/registerForm.css
@@ -260,10 +260,10 @@
 
 
 /* ----------------Checkbox Labels----------------- */
-.checkbox-label {
+.checkbox-labells {
     display: flex;
     align-items: center;
-    gap: 0.625rem;
+    gap: 0.8rem;
     font-size: 1rem;
     color: #747272;
     margin-bottom: 1rem;
@@ -271,17 +271,19 @@
     font-weight: bold;
 }
 
-.checkbox-label input[type="checkbox"] {
-    flex: 0 0 10%; /* Set checkbox to take up 10% of the container */
-    width: 1.25rem;
-    height: 1.25rem;
+.checkbox-labells input[type="checkbox"] {
+    flex: 0 0 4%; /* Set checkbox to take up 10% of the container */
+    width: 0.5rem;
+    height: 2rem;
     color: #666;
+    border: 8px solid #cecece;
+    border-radius: 4px;
     margin: 0; 
 }
 
-.checkbox-label span {
-    flex: 1; /* Set descriptive text to take up the remaining space */
-    text-align: left; /* Optional: align text to the left */
+.checkbox-labells span {
+    flex: 1;
+    text-align: left;
 }
 
 @media (max-width: 480px){
