--- a/apicius-frontend/src/styles/modal.css
+++ b/apicius-frontend/src/styles/modal.css
@@ -77,6 +77,7 @@
     cursor: pointer;
   }
   
+  
   .modal-save:hover {
     background-color: #0056b3;
   }
@@ -89,6 +90,7 @@
     overflow-y: auto;
     max-height: 400px;
     margin-bottom: 1rem;
+    text-align: left;
 }
 
 .modal-content form label {
@@ -106,14 +108,19 @@
     border-radius: 4px; /* Rounded corners */
     font-size: 14px; /* Control font size */
     margin-right: 25%;
+    background-color: #ffffff;
 }
 
 .modal-content form input::placeholder {
-  color: #aaa; /* Grey color for placeholder text */
+  color: #333; /* Grey color for placeholder text */
 }
 
 .modal-content form input:focus::placeholder {
   color: transparent; /* Hide placeholder on focus */
+}
+
+.modal-content form input:focus{
+  background-color: transparent;
 }
 
 .modal-content-row {
@@ -127,7 +134,7 @@
 .modal-country-dropdown {
   width: 75%;
   height: 30px;
-  color: #333;
+  color: #333 !important;
   padding: 0 0 0 2%;
   border: 1px solid #e0e0e0; /* Define border style */
   border-radius: 4px; /* Rounded corners */
@@ -137,7 +144,6 @@
 .modal-phonez {
   width: 20%;
   height: 2rem;
-  color: #333;
   padding: 0 0 2% 2%;
   border: 1px solid #e0e0e0; /* Define border style */
   border-radius: 4px; /* Rounded corners */
@@ -147,7 +153,7 @@
 .modal-phonecode {
   width: 35%;
   height: 2rem;
-  color: #888;
+  color: #333;
   padding: 0 0 0 2%;
   border: 1px solid #e0e0e0; /* Define border style */
   border-radius: 4px; /* Rounded corners */
@@ -161,7 +167,7 @@
   border: 1px solid #ccc;
   border-radius: 4px;
   font-size: 1rem;
-  color: #b9b8b8;
+  color: #333;
   background-color: #fff;
   outline: none;
 }
@@ -204,3 +210,4 @@
   background-color: #4a92de;
   color: white;
 }
+
