--- a/apicius-frontend/src/styles/registerForm.css
+++ b/apicius-frontend/src/styles/registerForm.css
@@ -169,11 +169,12 @@
     border: none;
     height: 100%;
     padding: 0 0.5rem;
+    border-radius: 0.4rem;
     box-sizing: border-box;
     color: #777;
     appearance: none;
     text-align: left;
-    padding-left: 1rem;
+    padding-left: 0.8rem;
     }
 
 /* Style for the input phone number field */
@@ -277,13 +278,14 @@
     height: 2rem;
     color: #666;
     border: 8px solid #cecece;
-    border-radius: 4px;
+    border-radius: 4rem;
     margin: 0; 
 }
 
 .checkbox-labells span {
     flex: 1;
     text-align: left;
+    
 }
 
 @media (max-width: 480px){
