--- a/apicius-frontend/src/styles/recipeDetailed.css
+++ b/apicius-frontend/src/styles/recipeDetailed.css
@@ -200,6 +200,22 @@ h3 {
     transition: background 0.3s ease;
 }
 
+.timer-btn {
+    position: absolute;
+    top: 1rem;
+    right: 7rem;
+    background-color: #fcba58;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 1rem;
+    margin-top: 4rem;
+
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background 0.3s ease;
+}
+
 .edit-recipe-btn:hover {
     background-color: #e68900;
 }
