--- a/apicius-frontend/src/styles/seasonality.css
+++ b/apicius-frontend/src/styles/seasonality.css
@@ -268,7 +268,9 @@
 
 .produce-list {
   display: grid;
-  gap: 1rem;
+  margin-left: -1.5rem;
+  margin-right: 0.9rem;
+  gap: 0.2rem;
 }
 
 .produce-item {
