--- a/apicius-frontend/src/styles/profilePage.css
+++ b/apicius-frontend/src/styles/profilePage.css
@@ -1,4 +1,4 @@
-/* Profile Page Styles */
+/* ________________Profile Page Styles________________ */
 .profile-page {
     font-family: Arial, sans-serif;
     margin-top: 3rem;
@@ -87,7 +87,7 @@
     font-size: 14px;
     color: #666;
 }
-/* Phone Field Styles */
+/* ________________Phone Field Styles________________ */
 .modal-phone-field {
     margin-bottom: 1.5rem;
     border: none;
@@ -119,7 +119,7 @@
     background-color: #fff;
 }
 
-/* Password Field Styles */
+/* ________________Password Field Styles________________ */
 .password-input-container {
     position: relative;
 }
@@ -148,7 +148,6 @@
     color: #333;
 }
 
-/* Text Color Classes */
 .black-text {
     color: #000; /* Black for fields with data */
 }
